Fixed Java compile warnings and bugfix for manual in the makefile